[tool.poetry]
name = "chat-with-memory"
version = "1.0.0"
description = "Demo project for a chat with memory"
authors = ["KennyVaneetvelde <kenny.vaneetvelde@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
atomic-agents = "^1.0.15"
rich = "^13.9.4"
instructor = "^1.6.4"
openai = "^1.54.4"
pydantic = "^2.9.2"
chromadb = "^0.5.18"
numpy = "^2.1.3"
snakeviz = "^2.2.2"


[tool.poetry.group.dev.dependencies]
snakeviz = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
